# cf1

./: .gitignore  CLAUDE.md  README.md  all_slides.txt  cf1_topic_punchlist.md  cf1_topic_punchlist_2025.md  email_policy.md
drawingThing/: sketch.js
examples/pyong/: PROMPT.md  mypy.ini  pyproject.toml  run_game.py
examples/pyong/pyong/: main.py  sounds.py
loadingStuff/: sketch.js
python/: classes.js  classes.py  dicts.py  fib.py  fun_functions.py  hello_world.py  lists.py  pyproject.toml  vars.py
scratch/: boid.ts
slide_sources/: W01 L01 - Course Overview.key  W01 L02 - Intro to p5.key  W02 L01 - Conditionals, If-Else, Boolean Expressions.key  W03 L01 - Loops.key  W03 L03 - How is CF1 Going.key  W04 L03 - Lists.key  W05 L02 - Advanced Objects and Lists.key  W06 L01 - Local Development.key  W07 L01 - Python Lists Dicts Functions.key  W07 L02 - Python Classes.key  Week 01 - Course Overview.key  Week 01 - Intro to p5.key  Week 03 - Conditions.key  Week 04 - Loops.key  Week 05 - Functions.key  Week 05 - How is CF1 Going.key  Week 08 - Advanced Objects and Lists.key  Week 09 - Project A.key  array_methods.js  classes.js  code.js  destructuring.js  interface.ts  js_interface.js  lists.js  objects.js
weeks/week-1-intro/: README.md
weeks/week-10-debugging/: README.md
weeks/week-2-animation/: README.md
weeks/week-3-interaction/: README.md
weeks/week-7-objects/: allison.js  encapsulation.js  make_new.js
weeks/week-9-project-a/fisher-v1/: index.html  jsconfig.json
weeks/week-9-project-a/fisher-v2/: index.html  package.json
(+26 files in other folders)
