[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "Python learning project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 50

[tool.ruff.format]
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
extend-select = ["E501"]             # Line too long
ignore = []

[tool.ruff.lint.pycodestyle]
max-line-length = 50
